GPC/tests/examples/fail/indexingNotArray.gpc

int GPRM::Test::indexingNotArray() {

    int x = 5;
    x[false].m1();

}
